Fixed alignment of "Other" dropdown menu.

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -44,3 +44,8 @@ nav {
 .navbar-nav {
   min-width: 180px;
 }
+
+.dropdown-menu {
+  left: -60px !important;
+  text-align: center;
+}
